--- a/environment.yml
+++ b/environment.yml
@@ -6,14 +6,14 @@ channels:
   - https://repo.anaconda.com/pkgs/r
 dependencies:
   - python=3.13.*
+  - ipykernel
+  - ipywidgets
+  - tqdm
   - fenics-dolfinx=0.9.0
   - mpich=4.3.2
   - pyvista=0.46.3
-  - ipykernel
-  - matplotlib
-  - numpy
-  - tqdm
-  - ipywidgets
+  - matplotlib=3.10.8
+  - numpy=2.4.0
   - trame=3.12.0
   - open3d=0.19.0
   - scikit-image=0.25.2
