--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - matplotlib=3.10.8
   - numpy=2.4.0
   - trame=3.12.0
+  - libopenblas=0.3.30
   - open3d=0.19.0
   - scikit-image=0.25.2
   - adios4dolfinx=0.9.5
