--- a/config.json
+++ b/config.json
@@ -3,6 +3,8 @@
     "storage_root": "/home/andreasstillits/coding/master/.treasury",
     "sample_id_digits": 5,
     "quiet": false,
+    "no_cmdconfig": false,
+    "no_manifest": false,
     "no_log": false,
     "log_level": "INFO",
     "log_filename": "run.log"
@@ -10,10 +12,10 @@
   "synthesize_uniform": {
     "base_seed": 123456,
     "resolution": 64,
-    "plug_aspect": 0.3,
-    "num_cells": 50,
-    "min_radius": 0.02,
-    "max_radius": 0.05,
+    "plug_aspect": 0.1,
+    "num_cells": 100,
+    "min_radius": 0.05,
+    "max_radius": 0.15,
     "min_separation": 0.01,
     "max_attempts": 1000,
     "storage_foldername": "synthesis"
