--- a/config.json
+++ b/config.json
@@ -17,7 +17,6 @@
     "min_radius": 0.05,
     "max_radius": 0.15,
     "min_separation": 0.01,
-    "max_attempts": 1000,
-    "storage_foldername": "synthesis"
+    "max_attempts": 1000
   }
 }
