--- a/config.json
+++ b/config.json
@@ -15,8 +15,13 @@
     "plug_aspect": 0.3,
     "num_cells": 100,
     "min_radius": 0.05,
-    "max_radius": 0.1,
+    "max_radius": 0.15,
     "min_separation": 0.01,
     "max_attempts": 1000
+  },
+  "triangulate": {
+    "smoothing_iterations": 15,
+    "decimation_target": 10000,
+    "shrinkage_tolerance": 0.1
   }
 }
