locked versions in environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - python=3.13.*
   - ipykernel
   - ipywidgets
-  - tqdm
+  - tqdm=4.67.1
   - fenics-dolfinx=0.9.0
   - mpich=4.3.2
   - pyvista=0.46.3
